--- a/form2.html
+++ b/form2.html
@@ -64,6 +64,7 @@
             <label for="">Rate our site
 
                 <select name="rating">
+                    <option selected="selected">Amazing</option>
                     <option value="">10</option>
                     <option value="">9</option>
                     <option value="">8</option>
@@ -75,6 +76,7 @@
                     <option value="">2</option>
                     <option value="">1</option>
                     <option value="">0</option>
+                    <option value="">Awful</option>
                 </select>
 
             </label>
