--- a/form2.html
+++ b/form2.html
@@ -61,9 +61,33 @@
         </p>
 
         <p>
+            <strong>How did you get our site?</strong>
+
+            <label for="">search engine
+                <input name="howtosite" type="radio" value="search engine" checked="checked">
+            </label>
+
+            <label for="">links from another site
+                <input name="howtosite" type="radio" value="link" checked="checked">
+            </label>
+
+            <label for="">Deitel.com web site
+                <input name="howtosite" type="radio" value="deitel.com" checked="checked">
+            </label>
+
+            <label for="">Reference in a book
+                <input name="howtosite" type="radio" value="book" checked="checked">
+            </label>
+
+            <label for="">other
+                <input name="howtosite" type="radio" value="other" checked="checked">
+            </label>
+        </p>
+
+        <p>
             <label for="">Rate our site
 
-                <select name="rating">
+                <select name=" rating">
                     <option selected="selected">Amazing</option>
                     <option value="">10</option>
                     <option value="">9</option>
@@ -89,6 +113,8 @@
 
 
     </form>
+
+    <a href="main.html"> main page </a> <br>
 
 </body>
 
