--- a/main.html
+++ b/main.html
@@ -8,20 +8,17 @@
 
 <head>
     <title>Welcome</title>
+
+    <meta name="keywords" content="web page, design, XHTML">
+
+    <meta name="description" content="This website will help you learn the basics of xhtml and web page design">
 </head>
 
 <body>
-    <p>Welcome to XHTML</p>
-    <p> <strong> if you want to send email </strong> </p>
-    <a href=" mailto:luanferreirareis@hotmail.com "> send email </a>
+    <h1>Welcome to XHTML</h1>
 
+    <h2> *using img tag</h2>
     <p>
-        <img src="img/teste-soft-img.jpg" width="200" height="100" alt="teste software">
-
-    </p>
-
-    <p>
-        goto facebook<br>
         <a href="https://www.facebook.com/">
 
             <img src="img/facebook.png" width="100" height="100" alt="facebook link"><br>
@@ -29,8 +26,22 @@
         </a>
 
         <a href="links.html"> links page </a><br>
-
     </p>
+
+    <h2> *using links </h2>
+
+    <p> <strong> if you want to send email </strong> </p>
+    <a href=" mailto:luanferreirareis@hotmail.com "> send email </a>
+
+    <p>
+        <img src="img/teste-soft-img.jpg" width="200" height="100" alt="teste software">
+    </p>
+
+    <p>
+        <a href="https://www.globo.com/"> globo </a> <br>
+    </p>
+
+    <h2> *header levels</h2>
 
     <h1>level 1</h1>
     <h2>level 2</h2>
@@ -41,7 +52,15 @@
 
 
 
-    <p> <a href="https://www.globo.com/"> globo<br> </a></p>
+    <p>
+    <h2> *Outros links </h2>
+    <a href="form.html"> form 1 </a> <br>
+    <a href="form2.html"> form 2 </a> <br>
+    <a href="table.html"> table 1 </a> <br>
+    <a href="table2.html"> table 2 </a> <br>
+    <a href="internallink.html"> table 2 </a> <br>
+    </p>
+
 </body>
 
 </html>
