--- a/main.html
+++ b/main.html
@@ -59,6 +59,12 @@
     <a href="table.html"> table 1 </a> <br>
     <a href="table2.html"> table 2 </a> <br>
     <a href="internallink.html"> table 2 </a> <br>
+    <a href="inline.html"> inline style </a> <br>
+    <a href="embedded.html"> embedded </a> <br>
+    </p>
+
+    <p>
+
     </p>
 
 </body>
