--- a/main.html
+++ b/main.html
@@ -61,6 +61,7 @@
     <a href="internallink.html"> table 2 </a> <br>
     <a href="inline.html"> inline style </a> <br>
     <a href="embedded.html"> embedded </a> <br>
+    <a href="external.html"> external css </a> <br>
     </p>
 
     <p>
