--- a/main.html
+++ b/main.html
@@ -50,8 +50,6 @@
     <h5>level 5</h5>
     <h6>level 6</h6>
 
-
-
     <p>
     <h2> *Outros links </h2>
     <a href="form.html"> form 1 </a> <br>
@@ -62,6 +60,12 @@
     <a href="inline.html"> inline style </a> <br>
     <a href="embedded.html"> embedded </a> <br>
     <a href="external.html"> external css </a> <br>
+    <a href="positioning2.html">positioning2</a><br>
+    <a href="backgroundimages.html">backgroundimages</a><br>
+    <a href="width.html">box dimensions</a><br>
+    <a href="borders.html">border</a><br>
+    <a href="floating.html">floating</a><br>
+    <a href="mediatypes.html">mediatypes</a><br>
     </p>
 
     <p>
