--- a/main.html
+++ b/main.html
@@ -66,6 +66,8 @@
     <a href="borders.html">border</a><br>
     <a href="floating.html">floating</a><br>
     <a href="mediatypes.html">mediatypes</a><br>
+    <a href="dropdown.html">dropdown</a><br>
+
     </p>
 
     <p>
