--- a/main.html
+++ b/main.html
@@ -67,6 +67,9 @@
     <a href="floating.html">floating</a><br>
     <a href="mediatypes.html">mediatypes</a><br>
     <a href="dropdown.html">dropdown</a><br>
+    <a href="welcome.html">welcome javascript</a><br>
+    <a href="welcome2.html">welcome javascript 2</a><br>
+    <a href="welcome3.html">welcome javascript 3</a><br>
 
     </p>
 
