--- a/main.html
+++ b/main.html
@@ -70,6 +70,9 @@
     <a href="welcome.html">welcome javascript</a><br>
     <a href="welcome2.html">welcome javascript 2</a><br>
     <a href="welcome3.html">welcome javascript 3</a><br>
+    <a href="welcome5.html">welcome javascript 5</a><br>
+    <a href="addition.html">addition </a><br>
+    <a href="welcome6.html">welcome javascript 6 </a><br>
 
     </p>
 
