--- a/welcome3.html
+++ b/welcome3.html
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-    <p>click refresh to run this script again</p>
+    <p>click refresh(or reload) to run this script again</p>
 
     <p>
         <a href="main.html"> main page </a> <br>
