--- a/main.html
+++ b/main.html
@@ -73,6 +73,8 @@
     <a href="welcome5.html">welcome javascript 5</a><br>
     <a href="addition.html">addition </a><br>
     <a href="welcome6.html">welcome javascript 6 </a><br>
+    <a href="average.html">average </a><br>
+    <a href="whileCounter.html">whileCounter </a><br>
 
     </p>
 
