--- a/main.html
+++ b/main.html
@@ -75,6 +75,11 @@
     <a href="welcome6.html">welcome javascript 6 </a><br>
     <a href="average.html">average </a><br>
     <a href="whileCounter.html">whileCounter </a><br>
+    <a href="interest.html">interest </a><br>
+    <a href="breaklabtest.html">breaklabtest </a><br>
+    <a href="nextrow.html">nextRow </a><br>
+    <a href="randomint.html">randomint </a><br>
+    <a href="craps.html">craps </a><br>
 
     </p>
 
