--- a/main.html
+++ b/main.html
@@ -34,7 +34,7 @@
     <a href=" mailto:luanferreirareis@hotmail.com "> send email </a>
 
     <p>
-        <img src="img/teste-soft-img.jpg" width="200" height="100" alt="teste software">
+        <img src="img/teste-soft.jpg" width="200" height="100" alt="teste software">
     </p>
 
     <p>
@@ -56,7 +56,7 @@
     <a href="form2.html"> form 2 </a> <br>
     <a href="table.html"> table 1 </a> <br>
     <a href="table2.html"> table 2 </a> <br>
-    <a href="internallink.html"> table 2 </a> <br>
+    <a href="internallink.html"> internal link </a> <br>
     <a href="inline.html"> inline style </a> <br>
     <a href="embedded.html"> embedded </a> <br>
     <a href="external.html"> external css </a> <br>
