--- a/main.html
+++ b/main.html
@@ -80,6 +80,7 @@
     <a href="nextrow.html">nextRow </a><br>
     <a href="randomint.html">randomint </a><br>
     <a href="craps.html">craps </a><br>
+    <a href="window.html">window </a><br>
 
     </p>
 
