--- a/window.html
+++ b/window.html
@@ -114,6 +114,10 @@
         <input id="setURLButton" type="button" value="Set Child URL" onclick="setChildWindowURL()"
             disabled="disabled" />
     </p>
+
+    <p>
+        <a href="main.html"> main page </a> <br>
+    </p>
 </body>
 
 
